Fixed flex aligning on the contact form styling

--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,7 @@ body {
 */
 .main {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     width: 100%;
@@ -96,9 +97,7 @@ body {
 }
 
 .contact-container {
-    box-sizing: border-box;
-    width: 20%;
-    
+    width: 20%; 
 }
 
 /*
